css/custom.css
body.survey{
  background-color: #f9f9f9;
}

h4{
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 2.0; }

p{
  line-height: 1.5;}

.row .inline-list img{
  margin-bottom: 0.45rem; }

a{
  color: #FF3333;
}

a:hover{
  color: #FF3333;
}

.index .banner, .survey .banner, .happy .banner{
  max-width: 100%;
  padding: 0;
  background-color: #ffffff;
  border-bottom: #f1f1f1 solid 1px;
}

.index .banner, .happy .banner{
  background-image: url("../img/vector-bkg.jpg");
}

.index .banner .medium-12, .survey .banner .medium-12,  .happy .banner .medium-12{
  margin: 0 auto;
  max-width: 62.50rem;
  padding: 1.875rem;
  text-align: center;
}

.index .banner .medium-12, .happy .banner .medium-12{
  min-height: 20rem;
}

.index .banner .medium-12 p, .happy .banner .medium-12 p {
  font-family: 'Titillium Web', sans-serif;
  font-size: 1.6rem;
  color: #fffffff;
}

.index .columns, .happy .columns{
  padding: 1.875rem 0;
}

.survey .columns{
  padding-left: 1.875rem;
  padding-right: 1.875rem;
}

.index footer .columns{
  padding-top: 0;
  padding-bottom: 0;
}

#gender-input input{
  display: inline-block;
}

.instructions p{
  font-family: 'Titillium Web', sans-serif;
  font-size: 1.2rem;
  padding: 1.875rem;
}

.survey h4, .score h4{
  color: #f04124;
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
  border-bottom: 4px solid #e1e1e1;
}

select {
    background-color: #ffffff;
}

#bigrating { 
  font-size: 8rem;
}

